update: fixed deprecated ChatColor